--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Portfolio | Elon Scott</title>
 
     <!-- GitHub and Twitter Links -->
-    <link rel="me" href="https://github.com/BlackNinja707" type="text/html">
+    <link rel="me" href="https://github.com/elonscottdev" type="text/html">
     <link rel="me" href="https://twitter.com/elonscottdev" type="text/html">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -147,7 +147,7 @@
                             translate
                         </i>
                     </button>
-                    <a href="https://github.com/BlackNinja707" target="_blank"
+                    <a href="https://github.com/elonscottdev" target="_blank"
                         class="navbar_action_link d-flex justify-content-center align-items-center">
                         <i class="fa-brands fa-github d-flex justify-content-center align-items-center"></i>
                     </a>
@@ -10884,7 +10884,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">Coolman's Universe 
                                             <div>
-                                                <a href="https://github.com/BlackNinja707/Coolman-Airdrop" target="_blank">
+                                                <a href="https://github.com/elonscottdev/Coolman-Airdrop" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://www.coolcoin.wtf" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -10922,7 +10922,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">My Portfolio
                                             <div>
-                                                <a href="https://github.com/BlackNinja707/portfolio" target="_blank">
+                                                <a href="https://github.com/elonscottdev/portfolio" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://elonscottdev.pro" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -10955,7 +10955,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">Adrestus Website
                                             <div>
-                                                <a href="https://github.com/BlackNinja707/privaterepository" target="_blank">
+                                                <a href="https://github.com/elonscottdev/Adrestus-website" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://www.adrestus.net" target="_blank">
                                                     <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -10993,7 +10993,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">Starkmeta AI Image Platform
                                             <div>
-                                                <a href="https://github.com/BlackNinja707/privaterepository" target="_blank">
+                                                <a href="https://github.com/elonscottdev/StarkAI_FEV2" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://www.starkmeta.ai" target="_blank">
                                                     <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -11028,7 +11028,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">RIPPLES Token Buy Bot on XRP
                                             <div>
-                                                <a href="https://github.com/BlackNinja707/Ripples-buybot" target="_blank">
+                                                <a href="https://github.com/elonscottdev/Ripples-buybot" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://t.me/RIPPLESXRPBuyBot" target="_blank">
                                                     <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -11055,9 +11055,9 @@
                                 <img src="images/special/hachiwebsite.png" class="card-img-top" alt="E-commerce Platform">
                                 <div class="card-body">
                                     <div class="card-title py-2">
-                                        <h5 class="mb-3 d-flex justify-content-between">ConstructionXpert Plateform
+                                        <h5 class="mb-3 d-flex justify-content-between">Hachiko Website
                                             <div>
-                                                <a href="https://github.com/BlackNinja707/Hachiko-Website" target="_blank">
+                                                <a href="https://github.com/elonscottdev/Hachiko-website" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://hachitoken.io" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -11089,7 +11089,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">StarkMeta NFT Marketplace
                                             <div>
-                                                <a href="https://github.com/BlackNinja707/StarkMeta-NFTmarketplace-SC" target="_blank">
+                                                <a href="https://github.com/elonscottdev/StarkMeta-NFTmarketplace-SC" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://stark-marketplace.vercel.app" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
