--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 <span>Email</span>
                             </a>
 
-                            <a href="https://t.me/elonscottdev" target="_blank" class="social-item">
+                            <a href="https://t.me/elonscott_dev" target="_blank" class="social-item">
                                 <i
                                     class="fa fa-telegram d-flex justify-content-center align-items-center"></i>
                                 <span>Telegram</span>
@@ -11333,7 +11333,7 @@
                     <span>Email</span>
                 </a>
 
-                <a href="https://t.me/elonscottdev" target="_blank" class="social-item">
+                <a href="https://t.me/elonscott_dev" target="_blank" class="social-item">
                     <i class="fab fa-telegram d-flex justify-content-center align-items-center"></i>
                     <span>Telegram</span>
                 </a>
