--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             Highly motivated and enthusiastic Full Stack & Blockchain Engineer with experience in designing, developing and maintaining Web2 & Web3 platforms using technologies such as Solidity, Rust, FunC, Tact, Huskell, React, Next.js, React-Native, Vue.
                         </p>
                         <div class="custom-btn-group mt-4">
-                            <a href="https://drive.google.com/file/d/1jDz6LdAq1LPvHVyWDJiLZccNjnT1UxIo/view?usp=sharing" target="_blank"
+                            <a href="https://drive.google.com/file/d/1ZNzo2oq-XJphpanuTyAR6KdloryeLmHt/view?usp=sharing" target="_blank"
                                 class="btn mr-lg-2 custom-btn d-flex justify-content-center align-items-center">
                                 Get
                                 Resume (CV)
@@ -10875,33 +10875,33 @@
                     <div class="col-10 col-md-6 mb-4 card-project">
                         <div class="box d-flex justify-content-center align-items-center">
                             <div class="card project-card">
-                                <img src="images/special/coolman.png" class="card-img-top" alt="E-commerce Platform">
+                                <img src="images/special/Hachi-swap.png" class="card-img-top" alt="Hachi-swap">
                                 <div class="card-body">
                                     <div class="card-title py-2">
-                                        <h5 class="mb-3 d-flex justify-content-between">Coolman's Universe 
+                                        <h5 class="mb-3 d-flex justify-content-between">Hachi-Swap 
                                             <div>
                                                 <a href="https://github.com/elonscottdev/Coolman-Airdrop" target="_blank">
                                                     <i class="fa fa-github"></i></a>
-                                                <a href="https://www.coolcoin.wtf" target="_blank"><i
+                                                <a href="https://hachi-swap-fe.vercel.app" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                             </div>
                                         </h5>
                                         <div class="badges d-flex justify-content-start align-items-center gap-2">
                                             <span
                                                 class="badge badge-green d-flex justify-content-center align-items-center">
-                                                Rust</span>
-                                            <span
-                                                class="badge badge-red d-flex justify-content-center align-items-center">
                                                 Solidity</span>
                                             <span
+                                                class="badge badge-red d-flex justify-content-center align-items-center">
+                                                Rust</span>
+                                            <span
                                                 class="badge badge-blue d-flex justify-content-center align-items-center">
-                                                Wormhole</span>
+                                                Next.js</span>
                                             <span
                                                 class="badge badge-rose d-flex justify-content-center align-items-center">
-                                                Solana/web3</span>
+                                                Tailwindcss</span>
                                             <span
                                                 class="badge badge-red d-flex justify-content-center align-items-center">
-                                                Next.js</span>
+                                                Figma</span>
                                         </div>
                                     </div>
                                     <p class="card-text">$COOLCOIN which represents famous NFT collection - Coolman's Universe.</p>
