--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
                         <small class="small-text"> <span>Welcome</span> to my portfolio
                             website! &#x2794; </small>
                         <h1 class="animated animated-text">
-                            <span class="mr-2">Hi, I'm</span>
+                            <span class="mr-2">Hi, I'm Elon Scott</span>
+                            <br>
                             <div class="animated-info">
-                                <span class="animated-item">Elon Scott</span>
-                                <span class="animated-item">AI Technician</span>
                                 <span class="animated-item">Senior Full Stack Engineer</span>
                                 <span class="animated-item">Blockchain Developer</span>
+                                <span class="animated-item">AI Technician</span>
                             </div>
                         </h1>
                         <p>
