--- a/index.html
+++ b/index.html
@@ -1088,19 +1088,13 @@
                 <h3>About Me</h3>
             </div>
 
-            <div class="about_container d-flex row">
-                <div
-                    class="about_container_cadre col-lg-5 d-flex justify-content-center align-items-start gap-3 flex-column mt-5 mx-2 position-relative">
-                    <div class="cadre box">
-                        <div class="hover-effect"></div>
-                        <img src="images/special/profile.jpg" alt="Profile picture" class="profile">
+            <div class="">
+                <div class="">
+                    <div class="cadre">
                     </div>
-                    <!-- <div class="sondage box">
-                        <div class="line_1"></div>
-                    </div> -->
                 </div>
 
-                <div class="col-lg-6 about_container_info">
+                <div class="about_container_info">
                     <span class="introduction box">
                         Welcome to the ES Zone! 🌱💻
                     </span>
