--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Java, Full Stack Developer, Smart contract, Backend Development, Solidity, Rust, Blockchain, RESTful APIs, Front-End Development">
 
-    <title>Portfolio | Elon Scott</title>
+    <title>I am Elon | Full Stack Developer</title>
 
     <!-- GitHub and Twitter Links -->
     <link rel="me" href="https://github.com/elonscottdev" type="text/html">
@@ -1399,7 +1399,7 @@
                             <div class="gradient-line box my-2"></div>
                             <div class="experience_container_info py-3">
                                 <h5 class="my-4 box">Full Stack Web3 Developer | <strong>Full-time</strong></h5>
-                                <h6 class="my-4 box">Jan. 2024 - Present | Houston, Texas, United States · Remote</h6>
+                                <h6 class="my-4 box">Jan. 2024 - Present | United States · Remote</h6>
                                 <p class="my-4 box">
                                     • Collaborated with UX and UI designers to create modern UI using <strong> Tailwind CSS</strong>,
                                     focusing on utility-first principles to accelerate development and maintain
@@ -1449,7 +1449,7 @@
                             <div class="gradient-line-gop box my-4"></div>
                             <div class="experience_container_info py-3">
                                 <h5 class="my-4 box">Senior Full Stack Engineer | <strong>Part-time</strong></h5>
-                                <h6 class="my-4 box">Oct. 2020 - Dec. 2023 | Remote
+                                <h6 class="my-4 box">Oct. 2020 - Dec. 2023 | New York · Remote
                                 </h6>
                                 <p class="my-4 box">• Wrote unique NFT marketplace contracts from the scratch.<br>
                                     • Integrated several Next/TS frontends and solidity smart contracts using Web3.js/Ether.js.<br>
@@ -1545,7 +1545,7 @@
                             class="experience_container d-flex flex-row justify-content-start align-items-start gap-5 mt-2">
                             <div class="gradient-line-jorf box my-4"></div>
                             <div class="experience_container_info py-3">
-                                <h5 class="my-4 box">Full Stack Engineer - <strong>Full-time</strong></h5>
+                                <h5 class="my-4 box">Full Stack Engineer | <strong>Full-time</strong></h5>
                                 <h6 class="my-4 box">Mar. 2018 - Sep. 2018 | United States · Remote
                                     <p class="my-4 box">
                                         • Developed a front end with a modular dashboard interface using React, Javascript and Jest.<br>
