--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>I am Elon | Full Stack Developer</title>
 
     <!-- GitHub and Twitter Links -->
-    <link rel="me" href="https://github.com/elonscottdev" type="text/html">
-    <link rel="me" href="https://twitter.com/elonscottdev" type="text/html">
+    <link rel="me" href="https://github.com/sm4rtdev" type="text/html">
+    <link rel="me" href="https://twitter.com/sm4rtdev" type="text/html">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -139,15 +139,7 @@
                         <input type="text" placeholder="Start typing..." class="search-input">
                         <span class="coding-symbole d-flex justify-content-center align-items-center">/</span>
                     </button>
-                    <button class="navbar_action_link d-flex justify-content-center align-items-center">
-                        <i class="fi fi-rs-brightness d-flex justify-content-center align-items-center"></i>
-                    </button>
-                    <button class="navbar_action_link d-flex justify-content-center align-items-center">
-                        <i class="material-symbols-outlined d-flex justify-content-center align-items-center">
-                            translate
-                        </i>
-                    </button>
-                    <a href="https://github.com/elonscottdev" target="_blank"
+                    <a href="https://github.com/sm4rtdev" target="_blank"
                         class="navbar_action_link d-flex justify-content-center align-items-center">
                         <i class="fa-brands fa-github d-flex justify-content-center align-items-center"></i>
                     </a>
@@ -170,14 +162,14 @@
                             <div class="animated-info">
                                 <span class="animated-item">Senior Full Stack Engineer</span>
                                 <span class="animated-item">Blockchain Developer</span>
-                                <span class="animated-item">AI Technician</span>
+                                <span class="animated-item">AI Engineer</span>
                             </div>
                         </h1>
                         <p>
                             Highly motivated and enthusiastic Full Stack & Blockchain Engineer with experience in designing, developing and maintaining Web2 & Web3 platforms using technologies such as Solidity, Rust, FunC, Tact, Huskell, React, Next.js, React-Native, Vue.
                         </p>
                         <div class="custom-btn-group mt-4">
-                            <a href="https://drive.google.com/file/d/1ZNzo2oq-XJphpanuTyAR6KdloryeLmHt/view?usp=sharing" target="_blank"
+                            <a href="https://drive.google.com/file/d/1enqIp8rsoCNvOxw_FpHLDkGjBfyrB7Ho/view?usp=sharing" target="_blank"
                                 class="btn mr-lg-2 custom-btn d-flex justify-content-center align-items-center">
                                 Get
                                 Resume (CV)
@@ -187,7 +179,7 @@
                         </div>
                         <div class="social-container d-flex justify-content-between align-items-center mt-5">
 
-                            <a href="https://www.twitter.com/elonscottdev" target="_blank"
+                            <a href="https://www.twitter.com/sm4rtdev" target="_blank"
                                 class="social-item">
                                 <i class="fab fa-twitter d-flex justify-content-center align-items-center"></i>
                                 <span>Twitter</span>
@@ -198,7 +190,7 @@
                                 <span>Email</span>
                             </a>
 
-                            <a href="https://t.me/elonscott_dev" target="_blank" class="social-item">
+                            <a href="https://t.me/sm4rtdev" target="_blank" class="social-item">
                                 <i
                                     class="fa fa-telegram d-flex justify-content-center align-items-center"></i>
                                 <span>Telegram</span>
@@ -10874,7 +10866,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">Hachi-Swap 
                                             <div>
-                                                <a href="https://github.com/elonscottdev/Coolman-Airdrop" target="_blank">
+                                                <a href="https://github.com/sm4rtdev/Coolman-Airdrop" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://hachi-swap-fe.vercel.app" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -10912,7 +10904,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">My Portfolio
                                             <div>
-                                                <a href="https://github.com/elonscottdev/portfolio" target="_blank">
+                                                <a href="https://github.com/sm4rtdev/portfolio" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://elonscottdev.pro" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -10945,7 +10937,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">Adrestus Website
                                             <div>
-                                                <a href="https://github.com/elonscottdev/Adrestus-website" target="_blank">
+                                                <a href="https://github.com/sm4rtdev/Adrestus-website" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://www.adrestus.net" target="_blank">
                                                     <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -10983,7 +10975,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">Starkmeta AI Image Platform
                                             <div>
-                                                <a href="https://github.com/elonscottdev/StarkAI_FEV2" target="_blank">
+                                                <a href="https://github.com/sm4rtdev/StarkAI_FEV2" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://www.starkmeta.ai" target="_blank">
                                                     <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -11018,7 +11010,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">RIPPLES Token Buy Bot on XRP
                                             <div>
-                                                <a href="https://github.com/elonscottdev/Ripples-buybot" target="_blank">
+                                                <a href="https://github.com/sm4rtdev/Ripples-buybot" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://t.me/RIPPLESXRPBuyBot" target="_blank">
                                                     <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -11047,7 +11039,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">Hachiko Website
                                             <div>
-                                                <a href="https://github.com/elonscottdev/Hachiko-website" target="_blank">
+                                                <a href="https://github.com/sm4rtdev/Hachiko-website" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://hachitoken.io" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -11079,7 +11071,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">StarkMeta NFT Marketplace
                                             <div>
-                                                <a href="https://github.com/elonscottdev/StarkMeta-NFTmarketplace-SC" target="_blank">
+                                                <a href="https://github.com/sm4rtdev/StarkMeta-NFTmarketplace-SC" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://stark-marketplace.vercel.app" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -11317,7 +11309,7 @@
 
             <div class="social-container box d-flex justify-content-between align-items-center my-5 ">
 
-                <a href="https://twitter.com/elonscottdev" target="_blank" class="social-item">
+                <a href="https://twitter.com/sm4rtdev" target="_blank" class="social-item">
                     <i class="fab fa-twitter d-flex justify-content-center align-items-center"></i>
                     <span>Twitter</span>
                 </a>
@@ -11327,7 +11319,7 @@
                     <span>Email</span>
                 </a>
 
-                <a href="https://t.me/elonscott_dev" target="_blank" class="social-item">
+                <a href="https://t.me/sm4rtdev" target="_blank" class="social-item">
                     <i class="fab fa-telegram d-flex justify-content-center align-items-center"></i>
                     <span>Telegram</span>
                 </a>
@@ -11338,7 +11330,7 @@
 
     <footer class="d-lg-flex justify-content-center align-items-center py-2">
         <article class="container d-flex justify-content-center align-items-center mt-3">
-            <p>Made By @Elon Scott <i class="fa-solid fa-fingerprint mx-2"></i></p>
+            <p>Made By @ Elon Scott <i class="fa-solid fa-fingerprint mx-2"></i></p>
         </article>
     </footer>
 
