--- a/index.html
+++ b/index.html
@@ -10866,7 +10866,7 @@
                                     <div class="card-title py-2">
                                         <h5 class="mb-3 d-flex justify-content-between">Hachi-Swap 
                                             <div>
-                                                <a href="https://github.com/sm4rtdev/Coolman-Airdrop" target="_blank">
+                                                <a href="https://github.com/sm4rtdev/HachikoSwap-Frontend" target="_blank">
                                                     <i class="fa fa-github"></i></a>
                                                 <a href="https://hachi-swap-fe.vercel.app" target="_blank"><i
                                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -10880,17 +10880,17 @@
                                                 class="badge badge-red d-flex justify-content-center align-items-center">
                                                 Rust</span>
                                             <span
-                                                class="badge badge-blue d-flex justify-content-center align-items-center">
-                                                Next.js</span>
+                                                class="badge badge-yellow d-flex justify-content-center align-items-center">
+                                                Javascript</span>
                                             <span
                                                 class="badge badge-rose d-flex justify-content-center align-items-center">
-                                                Tailwindcss</span>
+                                                Next.js</span>
                                             <span
                                                 class="badge badge-red d-flex justify-content-center align-items-center">
-                                                Figma</span>
+                                                Tailwindcss</span>
                                         </div>
                                     </div>
-                                    <p class="card-text">$COOLCOIN which represents famous NFT collection - Coolman's Universe.</p>
+                                    <p class="card-text">HachiSwap is a decentralized exchange (DEX) offering zero-fee spot trading with only takers paying gas fees. Built with Solidity, Rust, JavaScript, Next.js and Tailwindcss.</p>
                                 </div>
                             </div>
                         </div>
